// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a version correctly 1`] = `
<span
  className="overview-analysis-event analysis-version"
  title="version 6.5-SNAPSHOT"
>
  6.5-SNAPSHOT
</span>
`;

exports[`should render an event correctly 1`] = `
<div
  className="overview-analysis-event"
>
  <span
    className="note"
  >
    event.category.OTHER
    :
  </span>
   
  <strong>
    test
  </strong>
</div>
`;

exports[`should render rich quality gate event 1`] = `
<div
  className="overview-analysis-event"
>
  <span
    className="note"
  >
    event.category.QUALITY_GATE
    :
  </span>
   
  <FormattedMessage
    defaultMessage="event.quality_gate.still_x"
    id="event.quality_gate.still_x"
    values={
      Object {
        "status": <Level
          level="ERROR"
          small={true}
        />,
      }
    }
  />
</div>
`;
